  * The "]" (right bracket) key can be used to change which block types
    are highlighted.
  * Slime-spawn highlighting will only display in the Overworld
  * Slime-spawn highlighting will go up to y=40, as per Beta 1.9-pre5
  * Cleaned up snow rendering
  * Added a visual tint around the ore highlight toggle indicators,
    making them far easier to read in many circumstances.
  * (internal) update to LWJGL 2.8.2
  * (internal) removed quite a few unneeded LWJGL Jar files

Minecraft X-Ray 3.4.3 (2011.10.21)

  * Fixed a NullPointerException which occurs when xray.properties
    doesn't include STATE_HIGHLIGHT_ORES

Minecraft X-Ray 3.4.2 (2011.10.20)

  * Updated ore-highlighting toggle ("H" by default) to switch between
    old-style (white) and new-style (disco) highlighting, in addition to
    turning it off.
  * (internal) update to LWJGL 2.8.1

Minecraft X-Ray 3.4.1 (2011.10.15)

  * Updated Air Portal rendering to Beta 1.9-pre4
  * Added Ender Stone block from Beta 1.9-pre4
  * Set "The End" as a known dimension, for the level list
  * Rename AIR_PORTAL and AIR_PORTAL_FRAME to ENDER_PORTAL and
    ENDER_PORTAL_FRAME
  * Change minimap orientation to match the official internal Minecraft
    directions in Beta 1.9-pre4 (when the sunrise was changed from
	North to East)

Minecraft X-Ray 3.4.0 (2011.10.11)

  * New Functions:
    * The "C" key will toggle the new-style fence connection rendering,
      introduced in Beta 1.9-pre2
    * The "V" key will toggle Silverfish block highlighting on/off
    * The "U" key will toggle the rendering of chunk borders
    * Slime-spawning chunks can be highlighted with the "M" key.
    * "Y" will bring up a window with a keyboard reference

  * Rendering Improvements:
    * Support for the new Beta 1.9-pre3 blocks
    * Highlighting on solid blocks so they look more three-dimensional
    * Stems now connect to neighboring fruit properly
    * Slight improvements to fence and fence gate rendering accuracy